# lolxd-bot

./: Cargo.toml
src/: main.rs
