[package]
name = "lolxd-bot"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
markov = "1.0"
weebsocket = {git = "https://github.com/saethlin/weebsocket"}
weeqwest = {git = "https://github.com/saethlin/weeqwest", default-features = false, features=["tls"]}

[profile.release]
lto = true
panic = 'abort'
